--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "vue": "^3.0.0",
+    "vue-resource": "^1.5.3",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
